Left some stuff out of previous commit

--- a/mccalendar/templates/mccalendar/edit_event.html
+++ b/mccalendar/templates/mccalendar/edit_event.html
@@ -1,19 +1,14 @@
 {% extends "large_container.html" %}
 {% block inner_content %}
 
-<form method="post" action="{% url 'mccalendar:edit_event' %}" class="form-horizontal">
+<form method="post" action="{% url 'mccalendar:edit_event' event_id %}" class="form-horizontal">
 {% csrf_token %}
-  <div>
-  <ul>
-  {% for error in form.errors %}
-    <li>{{ error }}</li>
-  {% endfor %}
-  </ul>
   <div>
     {{ form.subject }}
     <label for="id_{{ form.subject.name }}">
       Subject
     </label>
+    <span class="text-right pull-right">Delete: {{ form.DELETE }}</span>
     <span class="">{{ form.subject.errors }}</span>
   </div>
   <div>
