make logo responsive, add view for scholars by class, fix display phone template filter

--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -181,6 +181,11 @@ footer {
   box-shadow: none;
 }
 
+#logo {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
 /* Calendar stuff (awful b/c written by Andrew) */
 .empty {
   width: 120px;
