--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -8,12 +8,9 @@
 {% if user.is_authenticated %}
 
 <div class="text-center">
-  <br>
-  <br>
-  <img src="{% static 'img/logo.png' %}" width="500">
-  <br>
-  <br>
-  <br>
+  <div id="logo"class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
+    <img src="{% static 'img/logo.png' %}" class="img-responsive">
+  </div>
   <form method="get" action="{% url 'search' %}">
     <div class="col-md-4 col-md-offset-4">
       <input class="form-control" type="text" name="q"
