--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -3,6 +3,10 @@
 {% load widget_tweaks %}
 {% load staticfiles %}
 
+{% block titleend %}
+McDermott Network
+{% endblock %}
+
 {% block content %}
 
 {% if user.is_authenticated %}
