--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>McDermott Network</title>
+    <title>{% block title %}{% endblock %}{% block titleend %} - McDermott Network{% endblock %}</title>
 
     <!-- jQuery - must come before Bootstrap JS file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
