--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -60,9 +60,20 @@ a.no-dec {
 .margin-top-lg {
   margin-top: 30px;
 }
+
+.staff-only {
+  color: #C75B12;
+}
 /* rules for profile page, mostly */
+
+@media (min-width: 768px) {
+  .profile-pic {
+    float: right;
+  }
+}
+
 .profile-name h3 {
-    line-height: 1;
+  line-height: 1;
 }
 
 .profile-contact-card {
@@ -70,9 +81,9 @@ a.no-dec {
 }
 
 .profile-contact-card p {
-    color: grey;
-    font-size: 16px;
-    line-height: 1;
+  color: grey;
+  font-size: 16px;
+  line-height: 1;
 }
 
 .profile-contact-field {
