Updated calendar/events look

--- a/mccalendar/templates/mccalendar/edit_event.html
+++ b/mccalendar/templates/mccalendar/edit_event.html
@@ -1,49 +1,70 @@
 {% extends "large_container.html" %}
+
+{% load widget_tweaks %}
+
 {% block inner_content %}
 
 <form method="post" action="{{ form_url }}" class="form-horizontal">
 {% csrf_token %}
   {{ form.id }}
-  <div>
-    {{ form.subject }}
-    <label for="id_{{ form.subject.name }}">
+  <div class="form-group margin-sm">
+    <label for="id_{{ form.subject.name }}" class="form-label">
       Subject
     </label>
-    <span class="">{{ form.subject.errors }}</span>
+    {{ form.subject|add_class:"form-control" }}
+    <span class="errors">{{ form.subject.errors }}</span>
   </div>
-  <div>
-    {{ form.description }}
-    <label for="id_{{ form.description.name }}">
+  <div class="form-group margin-sm">
+    <label for="id_{{ form.description.name }}" class="form-label">
       Description
     </label>
-    <span class="">{{ form.description.errors }}</span>
+    {{ form.description|add_class:"form-control" }}
+    <span class="errors">{{ form.description.errors }}</span>
   </div>
-  <div>
-    {{ form.start_date }}
-    <label for="id_{{ form.start_date.name }}">
-      Start Date
+  <div class="form-group margin-sm">
+    <label for="id_{{ form.location.name }}" class="form-label">
+      Location
     </label>
-    <span class="">{{ form.start_date.errors }}</span>
-      {{ form.start_time }}
+    {{ form.location|add_class:"form-control" }}
+    <span class="errors">{{ form.location.errors }}</span>
+  </div>
+  <div class="col-md-6">
+    <div class="form-group margin-sm">
+      <label for="id_{{ form.start_date.name }}">
+        Start Date
+      </label>
+      {{ form.start_date|add_class:"form-control" }}
+      <span class="errors">{{ form.start_date.errors }}</span>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="form-group margin-sm">
       <label for="id_{{ form.start_time.name }}">
         Start Time
       </label>
-    <span class="">{{ form.start_time.errors }}</span>
+      {{ form.start_time|add_class:"form-control" }}
+      <span class="errors">{{ form.start_time.errors }}</span>
+    </div>
   </div>
-  <div>
-    {{ form.end_date }}
-    <label for="id_{{ form.end_date.name }}">
-      End Date
-    </label>
-    <span class="">{{ form.end_date.errors }}</span>
-    {{ form.end_time }}
-    <label for="id_{{ form.end_time.name }}">
-      End Time
-    </label>
-    <span class="">{{ form.end_time.errors }}</span>
+  <div class="col-md-6">
+    <div class="form-group margin-sm">
+      <label for="id_{{ form.end_date.name }}">
+        End Date
+      </label>
+      {{ form.end_date|add_class:"form-control" }}
+      <span class="errors">{{ form.end_date.errors }}</span>
+    </div>
   </div>
-  <input type="submit" value="save"/>
+  <div class="col-md-6">
+    <div class="form-group margin-sm">
+      <label for="id_{{ form.end_time.name }}">
+        End Time
+      </label>
+      {{ form.end_time|add_class:"form-control" }}
+      <span class="errors">{{ form.end_time.errors }}</span>
+    </div>
   </div>
+  <input type="submit" value="Save" class="btn"/>
 </form>
 
 {% endblock %}
