--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -198,71 +198,56 @@ footer {
 }
 
 /* Calendar stuff (awful b/c written by Andrew) */
-.empty {
-  width: 120px;
-  height: 100px;
-  text-align: center;
-  font-size: 20px;
-}
-
-.month-header {
-  text-align: center;
-}
-
 .month {
   height: 500px;
-  width: 70%;
-}
-
-.month-table {
-/*  border-collapse:separate;*/
-/*  border-spacing:10px 10px;*/
+  width: 85%;
 }
 
 .day {
-  width: 120px;
-  height: 100px;
+  width: 140px;
+  height: 120px;
   padding: 2px;
+  margin: 2px;
+  vertical-align: top;
+  text-align: left;
+  border-radius: 2px;
+  border: 1px solid black;
+  overflow-y: scroll;
+  background-color: #fff;
+  border-color: black;
 }
 
 .day:hover {
   border: 2px solid black;
 }
 
+.day-header {
+  height: 60px;
+}
+
+.empty {
+  text-align: center;
+  font-size: 20px;
+  background: none;
+  border: none;
+}
+
+.empty:hover {
+  border: none;
+}
+
 .current {
-  width: 120px;
-  height: 100px;
-  border: 1px solid black;
-  padding: 2px;
+  background-color: azure;
 }
 
 .current:hover {
   border: 2px solid black;
 }
 
-.day-div {
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  text-align: left;
-  background-color: #fff;
-  position: relative;
-  border-radius: 2px;
-/*  overflow-y: auto;*/
-}
-
-.day-span {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
 .day-link {
   margin: 10px 0px 0px 10px;
 }
+
 a.day-link:link {
     text-decoration: none;
 }
@@ -277,3 +262,5 @@ a.day-link:hover {
 
 a.day-link:active {
     text-decoration: none;
+}
+
