--- a/mccalendar/templates/mccalendar/day.html
+++ b/mccalendar/templates/mccalendar/day.html
@@ -5,11 +5,11 @@
 {% block inner_content %}
 
 <h4 class="center">{{ month_name }} {{ day }}, {{ year }}</h4>
-{% if user|has_role:'staff' %}
-  <a href="{% url 'mccalendar:create_event' %}">Create event</a>
-{% endif %}
-
 {% for event in events %}
   <p><a href="{% url 'mccalendar:event_detail' event.id %}">{{ event.subject }}</a> - {{ event.description }}</p>
 {% endfor %}
+{% if user|has_role:'staff' %}
+  <a href="{% url 'mccalendar:create_event' %}" class="btn">Create event</a>
+{% endif %}
+
 {% endblock %}
