Removed useless code, added page titles

--- a/mccalendar/templates/mccalendar/day.html
+++ b/mccalendar/templates/mccalendar/day.html
@@ -2,6 +2,10 @@
 
 {% load permission_tags %}
 
+{% block title %}
+Calendar
+{% endblock %}
+
 {% block inner_content %}
 
 <h4 class="center">{{ month_name }} {{ day }}, {{ year }}</h4>
