--- a/mccalendar/templates/mccalendar/edit_event.html
+++ b/mccalendar/templates/mccalendar/edit_event.html
@@ -2,6 +2,10 @@
 
 {% load widget_tweaks %}
 
+{% block title %}
+Edit event
+{% endblock %}
+
 {% block inner_content %}
 
 <form method="post" action="{{ form_url }}" class="form-horizontal">
