--- a/mccalendar/templates/mccalendar/event_detail.html
+++ b/mccalendar/templates/mccalendar/event_detail.html
@@ -2,6 +2,10 @@
 
 {% load permission_tags %}
 
+{% block title %}
+Event detail
+{% endblock %}
+
 {% block inner_content %}
 
 <h4>{{ event.subject }}</h4>
