--- a/mccalendar/templates/mccalendar/event_list.html
+++ b/mccalendar/templates/mccalendar/event_list.html
@@ -1,4 +1,9 @@
 {% extends "large_container.html" %}
+
+{% block title %}
+Events
+{% endblock %}
+
 {% block inner_content %}
 
 <div class="event-list-header">
