--- a/mccalendar/templates/mccalendar/month.html
+++ b/mccalendar/templates/mccalendar/month.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block title %}
+Calendar
+{% endblock %}
+
 {% block content %}
 <div class="text-center">
   <h4 class="center">{{ month_name }}, {{ year }}</h4>
