--- a/core/templates/core/edit_abroad.html
+++ b/core/templates/core/edit_abroad.html
@@ -107,4 +107,10 @@
     <br>
   </form>
 </div>
+
+<script>
+  $(document).ready(function() {
+    $('.datepicker').datepicker();
+  });
+</script>
 {% endblock %}
