--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -131,4 +131,11 @@
     </div>
   </form>
 </div>
+
+
+<script>
+  $(document).ready(function() {
+    $('.datepicker').datepicker();
+  });
+</script>
 {% endblock %}
