--- a/mccalendar/templates/mccalendar/edit_event.html
+++ b/mccalendar/templates/mccalendar/edit_event.html
@@ -71,4 +71,9 @@ Edit event
   <input type="submit" value="Save" class="btn"/>
 </form>
 
+<script>
+  $(document).ready(function() {
+    $('.datepicker').datepicker();
+  });
+</script>
 {% endblock %}
