--- a/core/templates/core/edit_abroad.html
+++ b/core/templates/core/edit_abroad.html
@@ -125,7 +125,7 @@ Edit Study Abroad
     $('input').change(function() {
       if(!inputChanged) {
         $('#messageContainer').empty();
-        $('#messageContainer').append('<div class="alert alert-info" role="alert">Don\'t forget to save your changes!</div>');
+        $('#messageContainer').append('<div class="alert alert-warning" role="alert">Don\'t forget to save your changes!</div>');
         inputChanged = true;
       }
     });
