--- a/core/templates/core/edit_edu.html
+++ b/core/templates/core/edit_edu.html
@@ -135,7 +135,7 @@ Edit Education
     $('input').change(function() {
       if(!inputChanged) {
         $('#messageContainer').empty();
-        $('#messageContainer').append('<div class="alert alert-info" role="alert">Don\'t forget to save your changes!</div>');
+        $('#messageContainer').append('<div class="alert alert-warning" role="alert">Don\'t forget to save your changes!</div>');
         inputChanged = true;
       }
     });
