--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -1,6 +1,7 @@
 {% extends "large_container.html" %}
 
 {% load widget_tweaks %}
+{% load permission_tags %}
 
 {% block title %}
 Edit Info
@@ -61,20 +62,23 @@ Edit Info
       <div class="form-group margin-sm">
         <label for="id_{{ form.birthday.name }}" class="form-label">
           Birthday
+            <input type="checkbox" id="checkbox_{{ form.birthday.name }}" value="true" class="visibility-checkbox">
         </label>
         {{ form.birthday|add_class:"form-control" }}
         <span class="error">{{ form.birthday.errors }}</span>
       </div>
     </div>
-    <div class="col-md-3">
-      <div class="form-group margin-sm">
-        <label for="id_{{ form.class_year.name }}" class="form-label">
-          Class year
-        </label>
-        {{ form.class_year|add_class:"form-control" }}
-        <span class="error">{{ form.class_year.errors }}</span>
+    {% if mcuser.user|has_role:"scholar" %}
+      <div class="col-md-3">
+        <div class="form-group margin-sm">
+          <label for="id_{{ form.class_year.name }}" class="form-label">
+            Class year
+          </label>
+          {{ form.class_year|add_class:"form-control" }}
+          <span class="error">{{ form.class_year.errors }}</span>
+        </div>
       </div>
-    </div>
+    {% endif %}
     <div class="col-md-3">
       <div class="form-group margin-sm">
         <label for="id_{{ form.gender.name }}" class="form-label">
@@ -124,6 +128,7 @@ Edit Info
       <div class="form-group margin-sm">
         <label for="id_{{ form.phone_number.name }}" class="form-label">
           Phone Number
+          <input type="checkbox" id="checkbox_{{ form.phone_number.name }}" value="true" class="visibility-checkbox">
         </label>
         {{ form.phone_number|add_class:"form-control" }}
         <span class="error">{{ form.phone_number.errors }}</span>
@@ -150,9 +155,21 @@ Edit Info
     $('input').change(function() {
       if(!inputChanged) {
         $('#messageContainer').empty();
-        $('#messageContainer').append('<div class="alert alert-info" role="alert">Don\'t forget to save your changes!</div>');
+        $('#messageContainer').append('<div class="alert alert-warning" role="alert">Don\'t forget to save your changes!</div>');
         inputChanged = true;
       }
+    });
+    $('.visibility-checkbox').change(function() {
+      var element = $(this).attr('id').replace('checkbox', 'id');
+      console.log(element);
+      var label = $('label[for=' + element + ']');
+      if($(this).is(':checked')) {
+        label.addClass('staff-only');
+      }
+      else {
+        label.removeClass('staff-only');
+      }
+
     });
     $('.datepicker').datepicker();
   });
